--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -1,22 +1,22 @@
 {
-  "app.components.AboutMenu.header": "About",
+  "app.components.AboutMenu.header": "ACERCA DEL PROYECTO",
   "app.components.AboutPageComponents.beautifulTroubleAAHeader": "What’s the connection with Beautiful Trouble + ActionAid?",
   "app.components.AboutPageComponents.definition": "# DEFINITION\nWe’ve conducted six ‘jam sessions’ around the world with diverse groups of activists to better understand the problems they’re facing and generate locally relevant content for the toolbox.",
   "app.components.AboutPageComponents.faqHeader": "FAQ",
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
   "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
-  "app.components.AboutPageComponents.ipsum": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariaturSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima",
+  "app.components.AboutPageComponents.ipsum": "",
   "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "Our Advisory Network",
-  "app.components.AboutPageComponents.ourProcessHeader": "Our Process",
+  "app.components.AboutPageComponents.ourProcessHeader": "NUESTRO PROCESO",
   "app.components.AboutPageComponents.ourTeamHeader": "Our Team",
   "app.components.AboutPageComponents.ourValuesHeader": "WHAT ARE OUR VALUES?",
   "app.components.AboutPageComponents.partnersHeader": "Partners",
   "app.components.AboutPageComponents.prototyping": "# PROTOTYPING\nIn each jam session, low-fidelity prototypes of the toolbox were presented to activists to take apart and put back together based on their needs and challenges.",
   "app.components.AboutPageComponents.realization": "# REALIZATION\nEarly prototypes evolved into multiple iterations of what’s currently a [game](https://beautifulrising.org/platforms/game), [chatbot](https://beautifulrising.org/platforms/chatbot), and website. With your help, the content and the form will continue to evolve!",
-  "app.components.AboutPageComponents.theToolboxHeader": "The Toolbox",
+  "app.components.AboutPageComponents.theToolboxHeader": "LA CAJA DE HERRAMIENTAS",
   "app.components.Body.header": "This is the Body component !",
-  "app.components.ContributeMenu.header": "Contribute",
-  "app.components.ContributeMenu.howItWorks": "How does it work?",
+  "app.components.ContributeMenu.header": "CONTRIBUIR",
+  "app.components.ContributeMenu.howItWorks": "¿CÓMO PUEDO CONTRIBUIR?",
   "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at beautifulrising.org. Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
@@ -24,21 +24,21 @@
   "app.components.Header.logo": "en",
   "app.components.IconButton.header": "This is the IconButton component !",
   "app.components.Link.header": "This is the Link component !",
-  "app.components.Menu.advisoryNetMenu": "Our Advisory Network",
-  "app.components.Menu.btaaMenu": "Beautiful Trouble + AA",
-  "app.components.Menu.faqMenu": "FAQ",
+  "app.components.Menu.advisoryNetMenu": "NUESTRA RED DE ASESORAMIENTO",
+  "app.components.Menu.btaaMenu": "BEAUTIFUL TROUBLE + AA",
+  "app.components.Menu.faqMenu": "PREGUNTAS",
   "app.components.Menu.header": "This is the Menu component !",
-  "app.components.Menu.partnersMenu": "Partners",
-  "app.components.Menu.processMenu": "Our Process",
-  "app.components.Menu.teamMenu": "Our Team",
-  "app.components.Menu.toolBoxMenu": "The Toolbox",
-  "app.components.Menu.valuesMenu": "Our Values",
+  "app.components.Menu.partnersMenu": "SOCIOS DE RED",
+  "app.components.Menu.processMenu": "NUESTRO PROCESO",
+  "app.components.Menu.teamMenu": "NUESTRO EQUIPO",
+  "app.components.Menu.toolBoxMenu": "LA CAJA DE HERRAMIENTAS",
+  "app.components.Menu.valuesMenu": "NUESTROS VALORES",
   "app.components.NotFoundPage.header": "This is NotFoundPage component!",
-  "app.components.PlatformsMenu.chatbot": "Chatbot",
-  "app.components.PlatformsMenu.game": "Game",
-  "app.components.PlatformsMenu.header": "Platforms",
+  "app.components.PlatformsMenu.chatbot": "BOT DE CHARLA",
+  "app.components.PlatformsMenu.game": "JUEGO",
+  "app.components.PlatformsMenu.header": "PLATAFORMAS",
   "app.components.PlatformsMenu.pdf": "PDF",
-  "app.components.PlatformsMenu.subheader": "Explore other ways to access the toolbox",
+  "app.components.PlatformsMenu.subheader": "Explorar otras formas de acceder a las herramientas",
   "app.components.PlatformsPageComponents.chatbotHeader": "Chatbot",
   "app.components.PlatformsPageComponents.gameHeader": "Game",
   "app.components.PlatformsPageComponents.header": "This is the PlatformsPageComponents component !",
@@ -80,9 +80,9 @@
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "You can also <a href=\"https://docs.google.com/forms/d/e/1FAIpQLSfbN0Qb5P2ORCHYl4UPEdA-01I-ixPP9TRjEFv5c05HGguwrA/viewform\" target=\"_blank\">request</a> a Beautiful Rising training",
-  "app.components.TrainingMenu.header": "Training + Resources",
-  "app.components.TrainingMenu.otherResources": "Other Resources",
-  "app.components.TrainingMenu.requestTraining": "Request a Training",
+  "app.components.TrainingMenu.header": "CAPACITACIÓN + RECURSOS",
+  "app.components.TrainingMenu.otherResources": "OTROS RECURSOS",
+  "app.components.TrainingMenu.requestTraining": "SOLICITA UNA CAPACITACIÓN",
   "app.components.TypeMenu.header": "This is the TypeMenu component !",
   "app.components.TypeMenu.stories": "Stories",
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
