--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -117,5 +117,5 @@
   "app.containers.ToolsSortOptions.header": "This is ToolsSortOptions container !",
   "app.containers.ToolsSortOptions.newestButton": "Newest",
   "app.containers.ToolsViewOptions.header": "This is ToolsViewOptions container !",
-  "app.containers.TrainingPage.header": "This is TrainingPage container !"
+  "app.containers.TrainingPage.header": "TRAINING + RESOURCES"
 }
