--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -104,8 +104,8 @@
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
   "app.containers.ToolPage.relatedTools": "Related Tools",
   "app.containers.ToolPage.removeTool": "Remove this text from your saved tools",
-  "app.containers.ToolPage.showLess": "Show Less",
-  "app.containers.ToolPage.showMore": "Show More",
+  "app.containers.ToolPage.showLess": "Read Less",
+  "app.containers.ToolPage.showMore": "Read More",
   "app.containers.ToolPage.stories": "Stories",
   "app.containers.ToolPage.tactics": "Tactics",
   "app.containers.ToolPage.tags": "Tags",
